modules/040-control-plane-manager/e2e/control-plane-manager/tests/basic-audit-policy-maintenance/Taskfile.yml
version: "3"

includes:
  common:
    taskfile: ../Taskfile.common.yml
    dir: .
    flatten: true
    vars:
      CONFIG: ../../chainsaw-config.yaml
      NAME: basic-audit-policy-maintenance
